--- a/html/history.html
+++ b/html/history.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <meta name="description" content="L'histoire des 24H du Mans : sa création, le circuit, les innovations..." />
-    <meta name="author" content="Loic Bodolec, Anais Cotinet, Brice Mezerette et Nicolas Mercier"/>
+    <meta description="Tout savoir sur les 24H du Mans" />
+    <meta author="Loic Bodolec, Anais Cotinet, Brice Mezerette et Nicolas Mercier"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link href=“https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap” rel=“stylesheet”/>
+    <link
+    href=“https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap”
+    rel=“stylesheet”>
     <link rel="stylesheet" href="../css/style-home.css" />
-    <title>Histoire | 24H</title>
+    <title>Document</title>
   </head>
   <body>
     <!-- navbar  -->
@@ -135,20 +137,6 @@
             alt="Le pneu radial slick"
           />
         </div>
-        <input
-          type="button"
-          id="togg3"
-          class="btn history-btn"
-          value="Voir plus"
-        />
-      </div>
-
-      <div class="box-6">
-        <img
-          class="history-img"
-          src="../images/history_pneu radial.jpg"
-          alt="Le pneu radial slick"
-        />
       </div>
     </div> 
 
