--- a/html/home.html
+++ b/html/home.html
@@ -55,8 +55,13 @@
       <h1 class="header-title">LES 24H DU MANS</h1>
       <p class="header-text">Prepared to fight</p>
 
-     <!-- Modal Newsletter -->
-      <button type="button" class="newsletter-button" data-toggle="modal" data-target="#staticBackdrop">
+      <!-- Modal Newsletter -->
+      <button
+        type="button"
+        class="newsletter-button"
+        data-toggle="modal"
+        data-target="#staticBackdrop"
+      >
         S'INSCRIRE À LA NEWSLETTER
       </button>
 
@@ -66,13 +71,24 @@
           <h3>Inscription à la Newsletter</h3>
           <form class="newsletter-form">
             <label for="fName">Prénom :</label>
-            <input type="text" name="fname" id="fName" placeholder="Jean"/>
+            <input type="text" name="fname" id="fName" placeholder="Jean" />
             <label for="mailAdress">Email :</label>
-            <input type="email" name="email" id="mailAdress" placeholder="jean@mail.com"/>
+            <input
+              type="email"
+              name="email"
+              id="mailAdress"
+              placeholder="jean@mail.com"
+            />
             <label class="newsletter-check">
-              <input type="checkbox" checked="checked" name="subscribe"> J'accepte de recevoir les offres des partenaires
+              <input type="checkbox" checked="checked" name="subscribe" />
+              J'accepte de recevoir les offres des partenaires
             </label>
-            <input type="submit" name="inscription" id="inscriptionSend" value="JE M'INSCRIS" />
+            <input
+              type="submit"
+              name="inscription"
+              id="inscriptionSend"
+              value="JE M'INSCRIS"
+            />
           </form>
         </div>
       </div>
@@ -211,14 +227,32 @@
 
     <!-- footer -->
     <footer id="footer">
-      <ul class="footerMenu">
+      <ul class="footerList">
+        <li class="footerList-title">Navigation</li>
         <li><a class="footerItem" href="home.html">Accueil</a></li>
-        <li class="footerItemSeparator">|</li>
         <li><a class="footerItem" href="history.html"> Histoire</a></li>
-        <li class="footerItemSeparator">|</li>
         <li><a class="footerItem" href=""> Edition 2020</a></li>
-        <li class="footerItemSeparator">|</li>
         <li><a class="footerItem" href="contact.html"> Infos pratiques</a></li>
+      </ul>
+
+      <hr />
+
+      <ul class="footerList">
+        <li class="footerList-title">Partenaires</li>
+        <li><a class="footerItem" href="">Rolex</a></li>
+        <li><a class="footerItem" href="history.html">Le Mans Métropole</a></li>
+        <li><a class="footerItem" href="">Département de la Sarthe</a></li>
+        <li><a class="footerItem" href="contact.html">MMA</a></li>
+      </ul>
+
+      <hr />
+
+      <ul class="footerList">
+        <li class="footerList-legal-title">Légales</li>
+        <li class="footerList-legal">Photo credits Pixabay</li>
+        <li class="footerList-legal">
+          © 2020 Brice Mezerette, Loïc Bodolec, Nicolas Mercier
+        </li>
       </ul>
 
       <ul class="footerSocialNetworks">
